# mempalace

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  deploy-docs.yml
benchmarks/: mine_bench.py
benchmarks/model_eval/: README.md  candidates.yaml  metrics.py  orchestrator.py  runner.py  summarize.py  translate_datasets.py
benchmarks/model_eval/datasets/: README.md
benchmarks/model_eval/datasets/calibration/: dataset.de.jsonl  dataset.es.jsonl  dataset.fr.jsonl  dataset.hi.jsonl  dataset.it.jsonl  dataset.jsonl  dataset.ko.jsonl  dataset.pt-BR.jsonl  dataset.ru.jsonl  dataset.zh.jsonl  labels.jsonl
benchmarks/model_eval/datasets/entity_extraction/: dataset.de.jsonl  dataset.es.jsonl  dataset.fr.jsonl  dataset.hi.jsonl  dataset.it.jsonl  dataset.jsonl  dataset.ko.jsonl  dataset.pt-BR.jsonl  dataset.ru.jsonl  dataset.zh.jsonl  labels.jsonl
benchmarks/model_eval/datasets/memory_extraction/: dataset.de.jsonl  dataset.es.jsonl  dataset.fr.jsonl  dataset.hi.jsonl  dataset.it.jsonl  dataset.jsonl  dataset.ko.jsonl  dataset.pt-BR.jsonl  dataset.ru.jsonl  dataset.zh.jsonl  labels.jsonl  labels.ko.jsonl
benchmarks/model_eval/datasets/room_classification/: dataset.de.jsonl  dataset.es.jsonl  dataset.fr.jsonl  dataset.hi.jsonl  dataset.it.jsonl  dataset.jsonl  dataset.ko.jsonl  dataset.pt-BR.jsonl  dataset.ru.jsonl  dataset.zh.jsonl  labels.jsonl  room_lists.jsonl
benchmarks/model_eval/reports/: 2026-05-10-analysis.md  2026-05-10-z690-ex-glacial.md  2026-05-13-multilingual.md  README.md
benchmarks/model_eval/results/: .gitignore  2026-05-10-cloud-z690-ex-glacial.csv  2026-05-10-spotcheck-qwen3.csv  2026-05-10-z690-ex-glacial.csv  2026-05-11-cloud-z690-ex-glacial.csv  2026-05-11-modern-z690-ex-glacial.csv  README.md
benchmarks/model_eval/tasks/calibration/: prompts.py  score.py
benchmarks/model_eval/tasks/entity_extraction/: prompts.py  score.py
benchmarks/model_eval/tasks/memory_extraction/: prompts.py  score.py
benchmarks/model_eval/tasks/room_classification/: prompts.py  score.py
docs/: RELEASING.md  format-coverage.md  virtual-line-numbering.md
docs/recovery/: index-metadata-recovery.md
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh
mempalace/: __init__.py  cli.py  config.py  convo_miner.py  diary_ingest.py  dynamics.py  embedding.py  entity_detector.py  entity_registry.py  format_miner.py  general_extractor.py  hallways.py  hooks_cli.py  llm_client.py  mcp_server.py  migrate.py  miner.py  onboarding.py  palace.py  palace_graph.py  query_sanitizer.py  repair.py  searcher.py  version.py
mempalace/backends/: __init__.py  base.py  chroma.py
mempalace/data/: coca_content_words.json
mempalace/instructions/: init.md
tests/: conftest.py  test_backends.py  test_chroma_collection_lock.py  test_claude_plugin_hook_config.py  test_clean_lone_surrogates.py  test_cli.py  test_closet_llm.py  test_closets.py  test_config.py  test_convo_miner.py  test_convo_miner_unit.py  test_corpus_origin.py  test_corpus_origin_integration.py  test_dynamics.py  test_embeddinggemma.py  test_entity_detector.py  test_entity_registry.py  test_format_miner.py  test_general_extractor.py  test_hallways.py  test_hnsw_payload_health.py  test_hooks_bash_compat.py  test_hooks_cli.py  test_hooks_shell.py  test_hybrid_candidate_union.py  test_i18n.py  test_i18n_lang_case.py  test_init.py  test_line_numbers.py  test_llm_client.py  test_mcp_server.py  test_mcp_stdio_protection.py  test_migrate.py  test_miner.py  test_miner_fts5_validation.py  test_normalize.py  test_onboarding.py  test_palace.py  test_palace_graph_tunnels.py  test_palace_locks.py  (+6 more)
tools/: render_jsonl.py  save.md
website/.vitepress/: config.mts
website/guide/: claude-code-retention.md  getting-started.md  mcp-integration.md
