[project]
name = "mempalace"
version = "3.3.6"
description = "Give your AI a memory — mine projects and conversations into a searchable palace. No API key required."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "milla-jovovich"},
]
keywords = [
    "ai", "memory", "llm", "rag", "chromadb", "mcp",
    "vector-database", "claude", "chatgpt", "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=1.5.4,<2",
    "pyyaml>=6.0,<7",
    "tomli>=2.0.0; python_version < '3.11'",
    # Multilingual embedding model deps. Onboarding now offers the
    # embeddinggemma-300m ONNX model as the default for new installs, so
    # these are required core deps (not optional extras). The 300 MB ONNX
    # model itself is lazy-downloaded on first use, not at install time.
    # Users who pick minilm during onboarding still get these installed
    # but unused — small wheel-size cost in exchange for one fewer pip
    # command in the multilingual setup path.
    "huggingface_hub>=0.20",
    "tokenizers>=0.15",
    "numpy>=1.24",
    # Tier 6a content-date extraction uses dateutil for natural-language
    # date parsing (filename + content body branches). It happens to install
    # transitively today via chromadb→kubernetes→python-dateutil, but that
    # chain is not a contract — declared explicitly here to ensure
    # _extract_content_date keeps working if upstream kubernetes drops the
    # dependency. Per PR #1584 review (Igor, 2026-05-22).
    "python-dateutil>=2.8",
]

[project.urls]
Homepage = "https://github.com/MemPalace/mempalace"
Repository = "https://github.com/MemPalace/mempalace"
"Bug Tracker" = "https://github.com/MemPalace/mempalace/issues"

[project.scripts]
mempalace = "mempalace.cli:main"
mempalace-mcp = "mempalace.mcp_server:main"

[project.entry-points."mempalace.backends"]
chroma = "mempalace.backends.chroma:ChromaBackend"

# RFC 002 source-adapter entry-point group. Core publishes no first-party
# adapters under this group yet; ``miner.py`` and ``convo_miner.py`` migrate
# onto ``BaseSourceAdapter`` in a follow-up PR. Third-party adapter packages
# (``mempalace-source-cursor``, ``mempalace-source-git``, …) register here.
[project.entry-points."mempalace.sources"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff==0.15.14",
    "psutil>=5.9",
    # Property-based testing — generates hundreds of random inputs per
    # test to find counterexamples the hand-written positive tests miss.
    # Used opt-in (sprinkle ``@given(...)`` on a test); zero runtime
    # cost on tests that don't use it.
    "hypothesis>=6.0",
    # Pre-commit framework — gates every local ``git commit`` on the
    # same ruff checks CI runs. Required activation step in
    # CONTRIBUTING.md: ``pre-commit install`` once per clone. Without
    # this, contributors silently bypass the lint gate locally and only
    # discover failures at CI time.
    "pre-commit>=3.0",
    # mypy — static type checker. Catches lazy ``list`` / ``dict``
    # annotations that should be ``list[str]`` / ``dict[str, int]``,
    # missing return types, mismatched signatures across call sites.
    # Run ad-hoc with ``mypy mempalace/``; CI doesn't gate on it yet but
    # contributors should fix mypy errors they see before pushing.
    "mypy>=1.0",
]
spellcheck = ["autocorrect>=2.0"]
# Hardware acceleration for the ONNX embedding model. Install exactly one:
#   pip install mempalace[gpu]       — NVIDIA CUDA
#   pip install mempalace[dml]       — DirectML (Windows AMD/Intel/NVIDIA)
#   pip install mempalace[coreml]    — macOS Neural Engine
# After install, set MEMPALACE_EMBEDDING_DEVICE=cuda|dml|coreml (or "auto").
gpu = ["onnxruntime-gpu>=1.16"]
dml = ["onnxruntime-directml>=1.16"]
coreml = ["onnxruntime>=1.16"]
# Multilingual extra kept as a no-op alias for back-compat with
# `pip install mempalace[multilingual]` — these deps now ship in core.
multilingual = []
# Binary-format extraction for `mempalace mine --mode extract`. Per-format
# transformer routing: striprtf for .rtf, MarkItDown for .pdf/.docx/.pptx/
# .xlsx/.epub. MarkItDown requires Python ≥ 3.10 (env marker ensures it
# only installs where supported; Python 3.9 users still get RTF coverage).
extract = [
    "striprtf>=0.0.27",
    # Per PR #1555 review (Igor): bare ``markitdown`` is enough to import
    # but not enough to convert — actual PDF/DOCX/PPTX/XLSX extraction
    # needs MarkItDown's per-format sub-extras, which pull pdfminer-six,
    # mammoth, python-pptx, openpyxl, etc. EPUB is handled by base
    # markitdown (EpubConverter uses beautifulsoup4, a base requirement),
    # so no [epub] sub-extra is needed (and none exists in 0.1.5). RTF is
    # covered by striprtf above.
    "markitdown[docx,pdf,pptx,xlsx]>=0.1.5; python_version >= '3.10'",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff==0.15.14",
    "psutil>=5.9",
    "hypothesis>=6.0",
    "pre-commit>=3.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mempalace"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "W", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not benchmark and not slow and not stress'"
markers = [
    "benchmark: scale/performance benchmark tests",
    "slow: tests that take more than 30 seconds",
    "stress: destructive scale tests (100K+ drawers)",
]

[tool.coverage.run]
source = ["mempalace"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
